--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>student.site</title>
 </head>
 <body>
-    Hi!! I am Shubh
+    Hi!! I am Shubh. 
+    I'm 18 years old Tech savy person who loves to code.
 </body>
 </html>
