--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hi!! I am Shubh. 
     I'm 18 years old Tech savy person who loves to code.
+
+    I have worked on few CLI apps. I'll showcase it here tomorrow.
 </body>
 </html>
