--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     I'm 18 years old Tech savy person who loves to code.
 
     I have worked on few CLI apps. I'll showcase it here tomorrow.
+
+    In my free time, I play mobile games . I'm also learning to play a guitar.
 </body>
 </html>
